# grainchain

./: .env.example  .gitignore  .pre-commit-config.yaml  API_FEATURES.md  BENCHMARKING.md  CLI_REFERENCE.md  DESIGN.md  DOCKERFILE_SETUP.md  INTEGRATION.md  MANIFESTO.md  Makefile  README.md  TROUBLESHOOTING.md  debug_file_ops.py  debug_morph.py  debug_snapshots.py  debug_snapshots_detailed.py  e2b.Dockerfile  e2b.toml  e2b_demo.ipynb  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  simple_daytona_test.py  test_daytona_provider.py  test_daytona_simplified.py  test_dockerfile_simple.py  test_morph_complete_cycle.py  test_morph_provider.py  test_morph_snapshot_cycle.py  test_multi_repo_dockerfile.py  test_snapshot_simple.py
.github/workflows/: benchmark.yml  deploy-docs.yml  high-iteration-benchmark.yml  merge-benchmark.yml  test.yml
benchmark_results/: BENCHMARK_SUMMARY.md  daytona_benchmark.json  e2b_benchmark.json  local_benchmark.json
benchmarks/: CODEGEN_BENCHMARK.md  README.md
benchmarks/analysis/: __init__.py  comparator.py  config.py  data_parser.py  models.py  reporter.py  visualizer.py
benchmarks/configs/: analysis.json  codegen_outline.json  default.json  fastapi.json  grainchain.json  high_iteration.json  merge-small.json  outline.json  requests.json  snapshot_test.json
benchmarks/dockerfiles/: codegen-base.dockerfile
benchmarks/results/: .gitkeep  SUMMARY.md  benchmark_report_20250531_124014.md  benchmark_report_20250531_124052.md  benchmark_report_20250531_202224.md  benchmark_report_20250531_202231.md  benchmark_report_20250531_202248.md  benchmark_report_20250706_201420.md  comprehensive_benchmark_summary_20250531.md  grainchain_benchmark_20250531_180906.md  grainchain_benchmark_20250531_181021.md  grainchain_benchmark_20250531_181135.md  grainchain_benchmark_20250531_183817.md  grainchain_benchmark_20250531_183910.md  grainchain_benchmark_20250531_184145.md  grainchain_benchmark_20250531_200339.md  grainchain_benchmark_20250531_200630.md  grainchain_benchmark_20250531_200727.md  grainchain_benchmark_20250531_200857.md  grainchain_benchmark_20250531_200939.md  grainchain_benchmark_20250531_200952.md  grainchain_benchmark_20250531_201000.md  grainchain_benchmark_20250531_201135.md  grainchain_benchmark_20250531_201859.md  grainchain_benchmark_20250531_202102.md  grainchain_benchmark_20250604_025318.md  grainchain_benchmark_20250706_201034.md  grainchain_benchmark_20250706_201544.md  grainchain_benchmark_20250706_204124.md  grainchain_benchmark_20250706_204709.md  grainchain_benchmark_20250706_204945.md  grainchain_benchmark_20250706_210022.md  grainchain_benchmark_20250706_210627.md  grainchain_benchmark_20250706_211037.md  grainchain_benchmark_20250706_211106.md  latest_grainchain.md
benchmarks/scripts/: auto_publish.py  benchmark_runner.py  example_usage.py  grainchain_benchmark.py  grainchain_multi_repo_benchmark.py  multi_repo_benchmark_runner.py  run_grainchain_benchmark.sh
docs/: .gitignore  index.md  package-lock.json  package.json
docs/.vitepress/: config.js
docs/api/: index.md
docs/cli/: index.md
docs/developer/: index.md
docs/examples/: index.md
docs/guide/: analysis.md  benchmarking.md  index.md  quick-start.md
examples/: analysis_examples.py  basic_usage.py  data_analysis.py  docker_usage.py  hello_world.py  integration_patterns.py  morph_provider_example.py  provider_status_example.py  quick_start_example.py  simple_data_analysis.py  simplified_usage.py  sync_usage_demo.py
examples/langgraph/: README.md  basic_agent.py  real_llm_example.py
grainchain/: __init__.py  convenience.py
grainchain/cli/: __init__.py  analysis.py  benchmark.py  codegen_benchmark.py  exceptions.py  main.py  utils.py
grainchain/core/: __init__.py  config.py  exceptions.py  interfaces.py  providers_info.py  sandbox.py
grainchain/langgraph/: README.md  __init__.py  agent.py  local_integration.py  tools.py
grainchain/providers/: __init__.py  base.py  daytona.py  docker.py  e2b.py  local.py  modal.py  morph.py
grainchain/utils/: __init__.py  logging.py
scripts/: benchmark_all.sh  benchmark_high_iteration.sh  benchmark_status.sh
tests/: README.md  __init__.py  conftest.py  test_analysis.py  test_cli.py  test_cli_providers.py  test_comparison.py  test_convenience.py  test_providers_info.py  test_simplified_api.py
tests/cli/: test_exceptions.py  test_utils.py
tests/fixtures/: sample_benchmark_data.json
tests/integration/: test_daytona_provider.py  test_docker_provider.py  test_e2b_provider.py  test_local_provider.py  test_modal_provider.py
tests/langgraph/: test_agent.py  test_local_integration.py  test_tools.py
tests/unit/: test_config.py  test_docker_provider.py  test_exceptions.py  test_interfaces.py  test_providers.py  test_sandbox.py
